MENU AND NEW PAGES

--- a/infinity_server-web/src/main/webapp/includes/menu.xhtml
+++ b/infinity_server-web/src/main/webapp/includes/menu.xhtml
@@ -9,14 +9,68 @@
 				<i class="fa fa-home"></i>
 				<span>Home</span>
 			</p:link></li>
+
 		<li class="header">General</li>
-		<li><p:link href="/car-list.jsf">
-				<i class="fa fa-car"></i>
-				<span>Cars</span>
+		<li><p:link href="">
+				<i class="fa fa-money"></i>
+				<span>Bonds</span>
 			</p:link></li>
-		<li><p:link href="/car-list.jsf">
-				<i class="fa fa-car"></i>
-				<span>Test</span>
+		<li><p:link href="">
+				<i class="fa fa-eye"></i>
+				<span>Watch List</span>
+			</p:link></li>
+
+		<li class="header">Futures</li>
+		<li><p:link href="">
+				<i class="fa fa-rss"></i>
+				<span>Real Time Data</span>
+			</p:link></li>
+		<li><p:link href="">
+				<i class="fa fa-calculator"></i>
+				<span>Calculator</span>
+			</p:link></li>
+		<li><p:link href="">
+				<i class="fa fa-gears"></i>
+				<span>Manage Futures</span>
+			</p:link></li>
+		<li><p:link href="">
+				<i class="fa fa-history"></i>
+				<span>History</span>
+			</p:link></li>
+			
+		<li class="header">Market Data</li>
+		<li><p:link href="/user/articles.jsf">
+				<i class="fa fa-rss"></i>
+				<span>Articles</span>
+			</p:link></li>
+		<li><p:link href="/user/stock.jsf">
+				<i class="fa fa-dollar"></i>
+				<span>Stocks</span>
+			</p:link></li>
+
+		<li class="header">Profile</li>
+		<li><p:link href="">
+				<i class="fa fa-user-circle"></i>
+				<span>Edit Profile</span>
+			</p:link></li>
+		<li><p:link href="">
+				<i class="fa fa-unlock-alt"></i>
+				<span>Change password</span>
+			</p:link></li>
+
+		<li><p:link href="">
+				<i class="fa fa-ban"></i>
+				<span>Deactivate Account</span>
+			</p:link></li>
+
+		<li class="header">Statistics</li>
+		<li><p:link href="">
+				<i class="fa fa-area-chart"></i>
+				<span>Bonds</span>
+			</p:link></li>
+		<li><p:link href="">
+				<i class="fa fa-pie-chart"></i>
+				<span>Market Data</span>
 			</p:link></li>
 
 	</ul>
