Commit version 1 stable by Mdaghi

--- a/infinity_server-web/src/main/webapp/includes/menu.xhtml
+++ b/infinity_server-web/src/main/webapp/includes/menu.xhtml
@@ -25,15 +25,19 @@
 				<i class="fa fa-rss"></i>
 				<span>Real Time Data</span>
 			</p:link></li>
-		<li><p:link href="">
+		<li><p:link href="/user/InterestCalculator.jsf">
 				<i class="fa fa-calculator"></i>
 				<span>Calculator</span>
 			</p:link></li>
-		<li><p:link href="">
+		<li><p:link href="/user/Future.jsf">
 				<i class="fa fa-gears"></i>
 				<span>Manage Futures</span>
 			</p:link></li>
-		<li><p:link href="">
+		<li><p:link href="/user/RealInformation.jsf">
+				<i class="fa fa-info"></i>
+				<span>Information</span>
+			</p:link></li>
+		<li><p:link href="/user/StatistiqueFuture.jsf">
 				<i class="fa fa-history"></i>
 				<span>History</span>
 			</p:link></li>
