--- a/infinity_server-web/src/main/webapp/includes/top-bar.xhtml
+++ b/infinity_server-web/src/main/webapp/includes/top-bar.xhtml
@@ -46,7 +46,7 @@
                             <p:commandLink styleClass="btn btn-danger" value="Change password"/>
                         </div>
                         <div class="pull-right">
-                            <p:commandLink id="logout" action="#{logoutMB.doLogout}" title="Logoff">
+                            <p:commandLink id="logout" action="#{logonMB.logout()}" title="Logoff">
                                 <i class="fa fa-sign-out fa-2x"></i>
                             </p:commandLink>
                         </div>
