--- a/infinity_server-web/src/main/webapp/includes/adminMenu.xhtml
+++ b/infinity_server-web/src/main/webapp/includes/adminMenu.xhtml
@@ -5,11 +5,39 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 
 	<ul class="sidebar-menu">
+		<li>
+		
+		<p:link href="/index.jsf" onclick="clearBreadCrumbs()">
+				<i class="fa fa-home"></i>
+				<span>Home</span>
+		</p:link></li>
 
-		<ui:insert name="menuSeif">
-			<ui:include src="/includes/menuSeif.xhtml" />
-		</ui:insert>
+		<li class="header">Client</li>
+		<li><p:link href="">
+				<i class="fa fa-money"></i>
+				<span>Statistics</span>
+			</p:link></li>
 
+		<li><p:link href="">
+				<i class="fa fa-eye"></i>
+				<span>Ban User</span>
+			</p:link></li>
+
+		<li><p:link href="">
+				<i class="fa fa-ban"></i>
+				<span>List Client</span>
+			</p:link></li>
+
+
+		<li class="header">Futures</li>
+		<li><p:link href="/admin/ManageFuture.jsf">
+				<i class="fa fa-gears"></i>
+				<span>Manage Futures</span>
+			</p:link></li>
+		<li><p:link href="/admin/ManageSymbol.jsf">
+				<i class="fa fa-gears"></i>
+				<span>Manage Symbols</span>
+			</p:link></li>
 
 	</ul>
 
