marwa first commit

--- a/infinity_server-web/src/main/webapp/includes/menu.xhtml
+++ b/infinity_server-web/src/main/webapp/includes/menu.xhtml
@@ -19,7 +19,16 @@
 				<i class="fa fa-eye"></i>
 				<span>Watch List</span>
 			</p:link></li>
-
+			
+			<li><p:link href="/Option/OptionPut.jsf">
+				<i class="fa fa-eye"></i>
+				<span>Put Options</span>
+			</p:link></li>
+			
+			<li><p:link href="/Option/OptionCall.jsf">
+				<i class="fa fa-eye"></i>
+				<span>Call Options</span>
+			</p:link></li> 
 		<li class="header">Futures</li>
 		<li><p:link href="/user/RealTimeData.jsf">
 				<i class="fa fa-rss"></i>
